Bug 48865 - png artifacts in Lotus Notes
Summary: png artifacts in Lotus Notes
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-18 02:39 UTC by Toralf Förster
Modified: 2012-04-18 04:10 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Up the alignment to 4 render pixels (1.33 KB, patch)
2012-04-18 03:40 UTC, Chris Wilson
no flags Details | Splinter Review

Description Toralf Förster 2012-04-18 02:39:31 UTC
The following commit seems to mangle small PNG icons at an Intel GM45 graphic card, if the notebook is driven in a dual-head configuration (internal LVDS1 w/ 1440x900 + external VGA w/ 1280x1024) :

$ git bisect bad
1ce2b65d622797000e0a4db7dc851d5b1da04f85 is the first bad commit
commit 1ce2b65d622797000e0a4db7dc851d5b1da04f85
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Apr 14 11:59:31 2012 +0100

    sna: Align render target sizes on gen2/3 to 4x4 render spans
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

:040000 040000 97e7b24b79bc681e24df91232e43625759f1cbf0 ed63e6d4bc53cb8d4b53aae8fd5380ec89bcf87f M      src



Here https://bugzilla.kernel.org/show_bug.cgi?id=43116 you can find attached screen shots as examples.
Comment 1 Chris Wilson 2012-04-18 02:47:27 UTC
*g* I was half expecting that fallout. I keep poking that code to see if I've fixed the underlying issues, and everytime so far it turns out I have not.
Comment 2 Chris Wilson 2012-04-18 03:40:54 UTC
Created attachment 60242 [details] [review]
Up the alignment to 4 render pixels

Can you please test this patch?
Comment 3 Toralf Förster 2012-04-18 04:04:16 UTC
(In reply to comment #2)
> Can you please test this patch?
issue solved - at a first quick view (BTW reverting 1ce2b65d6 worked too)

(In reply to comment #1)
> *g* I was half expecting that fallout.
gah - I argued first that a gdk-pixbuf update introduced this nagging glitches 

:-)
Comment 4 Chris Wilson 2012-04-18 04:10:46 UTC
Thanks, lets run with that and see if and further issues are uncovered.

commit fd81408b978c9b57c046ee43d2d32e1370e83a7d
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Apr 18 11:39:43 2012 +0100

    sna: Increase the render target alignment to 4 pixels on gen4+ as well
    
    Repoerted-and-tested-by: Toralf Förster <toralf.foerster@gmx.de
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=48865
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.